tests/baselines/reference/jsDeclarationsTypeReferences3.errors.txt
index.js(3,1): error TS18055: Declaration file contains hand-written type reference directives: "node"


==== index.js (1 errors) ====
    /// <reference types="node" />
    
    const Something = require("fs").Something;
    ~~~~~
!!! error TS18055: Declaration file contains hand-written type reference directives: "node"
    module.exports.A = {}
    module.exports.A.B = {
        thing: new Something()
    }
    
==== node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
        export class Something {}
    }